k8s/kube-system/traefik/03-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.0
          args:
            - --accesslog=true
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --api.insecure=true
            # - --log.level=DEBUG
            - --providers.kubernetescrd
            - --providers.kubernetescrd.namespaces=kube-system,auth,overwatch,monitoring,media,vpnapps,media-manager,personal,development,nginx-test,immich,obsidian
          ports:
            - name: web
              containerPort: 80
              hostPort: 80 # This matches the port in your Kind config
            - name: websecure
              containerPort: 443
              hostPort: 443
            - name: admin
              containerPort: 8080
      terminationGracePeriodSeconds: 60
