k8s/kube-system/traefik/05-dashboard-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    # This rule redirects http://traefik.localdev to http://traefik.localdev/dashboard/
    - match: Host(`traefik.localdev`) && PathPrefix(`/`)
      kind: Rule
      priority: 100
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-dashboard-redirect
    # This rule handles the dashboard itself
    - match: Host(`traefik.localdev`) && PathPrefix(`/dashboard`)
      kind: Rule
      priority: 101
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-redirect
  namespace: kube-system
spec:
  redirectRegex:
    regex: ^https?://([^/]+)/?$
    replacement: http://${1}/dashboard/
    permanent: true
